--- a/.mergify.yml
+++ b/.mergify.yml
@@ -4,15 +4,7 @@ queue_rules:
       - "#approved-reviews-by>=1"
       - "#changes-requested-reviews-by<=0"
       - "#review-requested>=1"
-      - "check-success=Lint Docs"
-      - "check-success=UT Test on Ubuntu/x64"
-      - "check-success=UT Test on Darwin/x86"
-      - "check-success=UT Test on Linux/Arm"
-      - "check-success=BVT Test on Ubuntu/x64"
-      - "check-success=BVT Test on Linux/Arm"
-      - "check-success=BVT Test on Darwin/x86"
-      - "check-success=BVT RACE Test on CentOS/x64"
-      - "check-success=SCA Test on Ubuntu/x64"
+      - "check-success=SCA Test on CentOS/x64"
 
 pull_request_rules:
   - name: Automatic merge on approval
@@ -20,15 +12,7 @@ pull_request_rules:
       - "#approved-reviews-by>=1"
       - "#changes-requested-reviews-by<=0"
       - "#review-requested>=1"
-      - "check-success=Lint Docs"
-      - "check-success=UT Test on Ubuntu/x64"
-      - "check-success=UT Test on Darwin/x86"
-      - "check-success=UT Test on Linux/Arm"
-      - "check-success=BVT Test on Ubuntu/x64"
-      - "check-success=BVT Test on Linux/Arm"
-      - "check-success=BVT Test on Darwin/x86"
-      - "check-success=BVT RACE Test on CentOS/x64"
-      - "check-success=SCA Test on Ubuntu/x64"
+      - "check-success=SCA Test on CentOS/x64"
       
     actions:
       queue:
