--- a/.mergify.yml
+++ b/.mergify.yml
@@ -16,6 +16,8 @@ pull_request_rules:
       queue:
         name: default
         method: squash
+        commit_message_template: |
+          @{{ body_raw }}
   - name: label for Bug
     conditions: 
       - body~=(?m)- \[(?i)x\] BUG
