ci(Mergify): configuration update
Signed-off-by: null <1712486265@qq.com>

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,15 +1,12 @@
 queue_rules:
   - name: default
-    conditions:
-      - "#approved-reviews-by>=1"
-      - "#changes-requested-reviews-by<=0"
-      - "check-success=SCA Test on CentOS/x64"
+    conditions: []
+    checks_timeout: 30m
 
 pull_request_rules:
   - name: Automatic merge on approval
     conditions:
-      - "#changes-requested-reviews-by<=0"
-      - "#review-requested>=1"
+      - "#approved-reviews-by>=1"
       - "check-success=SCA Test on CentOS/x64"
 
     actions:
@@ -20,6 +17,12 @@ pull_request_rules:
           {{ title }}(#{{ number }})
 
           Approved by: @{{ approved_reviews_by | join(', @') }}
+          
+  - name: auto update branch
+    conditions:
+      - created-at>=00:10 ago
+    actions:
+      update: 
   - name: label for Bug
     conditions:
       - body~=(?m)- \[(?i)x\] BUG
