--- a/.mergify.yml
+++ b/.mergify.yml
@@ -15,6 +15,8 @@ pull_request_rules:
         method: squash
         commit_message_template: |
           {{ title }}(#{{ number }})
+          
+          {{ body | get_section("**What this PR does / why we need it:**") }}
 
           Approved by: @{{ approved_reviews_by | join(', @') }}
           
