ci(Mergify): configuration update
Signed-off-by: null <null>

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -20,7 +20,14 @@ pull_request_rules:
           {{ body | get_section("## **What this PR does / why we need it:**") }}
 
           Approved by: @{{ approved_reviews_by | join(', @') }}
-          
+      edit:
+        draft: false
+  - name: Auto Draft
+    conditions:
+      - created-at>=00:10 ago
+    actions:
+      edit:
+        draft: True
   - name: label for Bug
     conditions:
       - body~=(?m)- \[(?i)x\] BUG
