--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,4 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: guguducken/test-action@main
-        with: 
-          action-token: ${{ secrets.ACTION_TOKEN }}
-          name-test: "ok,skip,test"
+      - uses: guguducken/shell-test-action@main
