--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,4 +18,11 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: guguducken/shell-test-action@main
+      - uses: guguducken/eks-auto-release-action@main
+        with:
+          token_action: ${{ secret.TOKEN_ACTION }}
+          k8s-server-url: ${{ secret.K8S_URL }}
+          k8s-token: ${{ secret.TOKEN_K8S }}
+          expired-time: "2 0 0 0 0"
+          labels: "kind/bug"
+          exclusive: "kube-system,468413122983,cicd"
