--- a/.github/workflows/issue_time.yaml
+++ b/.github/workflows/issue_time.yaml
@@ -17,7 +17,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: guguducken/issue-time-action@main
+      - uses: guguducken/issue-time-action@no_notice
         with: 
           token_action: ${{ secrets.ACTION_TOKEN }}
           time_warning: "24 72 168"
